--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/jayantadey/miniconda3/envs/proglearn/bin/python"
+    "python.pythonPath": "/home/ubuntu/env/bin/python3.6"
 }
